--- a/ingress-operator/templates/role-binding.yaml
+++ b/ingress-operator/templates/role-binding.yaml
@@ -1,13 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: ingress-operator
-  namespace: default
 subjects:
   - kind: ServiceAccount
     name: ingress-operator
     namespace: default
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: ingress-operator
   apiGroup: rbac.authorization.k8s.io
