--- a/ingress-operator/templates/deployment.yaml
+++ b/ingress-operator/templates/deployment.yaml
@@ -17,3 +17,8 @@ spec:
       containers:
         - name: operator
           image: brkkr/auto-ingress:latest
+              env:
+              - name: KOPF_NAMESPACE
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.namespace
