--- a/operator/Dockerfile
+++ b/operator/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY operator.py .
 
-CMD ["kopf", "run", "--verbose", "operator.py"]
+CMD ["kopf", "run", "--standalone", "--verbose", "operator.py"]
